# chord

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
src/: cli.rs  git.rs  lib.rs  main.rs  manifest.rs  repo.rs  workspace.rs
src/commands/: forall.rs  init.rs  mod.rs  status.rs  sync.rs  topdir.rs  update.rs
src/git/: libgit2.rs
src/workspace/: git.rs  lockfile.rs  manifest.rs  repo.rs  utils.rs
src/workspace/git/: libgit2.rs
tests/: common.rs  forall.rs  init.rs  status.rs  sync.rs  topdir.rs  update.rs
