[package]
name = "chord-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
comfy-table = "7.2.2"
git2 = { version = "0.21.0", features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = { version = "0.0.26", default-features = false, features = ["serialize", "deserialize", "validator"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"

[[bin]]
name = "chord"
path = "src/main.rs"
